<resources>
    <string name="app_name">Mohaasaba</string>
    <string name="dummy_text">This is a Sample Text for rabbit purpose</string>
    <string name="dummy_tags">tag1, tag2, tag3</string>
    <string name="title_request_text">Enter Title Here</string>
    <string name="notify_message_request">Enter a Message to Notify</string>
    <string name="title_request_warning">Enter a valid title</string>
    <string name="edit_text">Edit</string>
    <string name="save_text">Save</string>
    <string name="tag_icon">Tag Icon</string>
    <string name="success_msg">Successfully Done</string>
    <string name="no_tags">no tags!</string>
    <string name="last_modified_text">Last Edited </string>
    <string name="sample_date">12 July 2020</string>
    <string name="note_text">Add Note</string>
    <string name="toolBarTitle_editSchedule">Edit Schedule</string>
    <string name="button_clicked"> Button Clicked!</string>
    <string name="today_text">today</string>
    <string name="now_text">now</string>
    <string name="item_removed_toast">Item Removed</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="label_text">Label</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="demo_date">Fri, 31 Jul 2020</string>
    <string name="demo_time">12:10 am</string>
    <string name="notify_text">Notify</string>
    <string name="repeat_text">Repeat Every</string>
    <string name="notify_before">Notify Before</string>
    <string name="time_request">put time here</string>
    <string name="icon_bell">Bell Icon</string>
    <string name="demo_repeat_interval">5 Days</string>
    <string name="delete_text">Delete</string>
    <string name="scheduleType_daily_text">Daily Schedule</string>
    <string name="scheduleType_onWeekday">On Weekday</string>
    <string name="scheduleType_onMonth">On Month</string>
    <string name="scheduleType_onMonthAndDay">Month and Days</string>
    <string name="scheduleType_custom_text">Custom Schedule</string>
    <string name="scheduleType_interval_text">Custom Interval</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="filter_text">Filter</string>
    <string name="today_s_schedules">Today\'s Schedules</string>
    <string name="all_schedules">All Schedules</string>
    <string name="text_request">Start Writing…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_text">Confirm</string>
    <string name="add_target">Add Target</string>
    <string name="change_color">Change Color</string>
    <string name="add_new_todo">Add New Todo</string>
    <string name="complete_todo">Complete Todo</string>
    <string name="count_progress">Count Progress</string>
    <string name="todo_text">Todo</string>
    <string name="no_schedule">No Schedule! Create One</string>
    <string name="color_picker_warning">Changing color will Destroy Unsaved changes.</string>
    <string name="fragment_custom_date_warning">Schedule will show on these Dates only</string>
    <string name="fragment_daily_warning">Schedule will Appear in Specified Days</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="feature_not_available">Feature Not Available</string>
    <string name="expand_history">expand history</string>
    <string name="debug_text">Debug</string>
    <string name="unit">Unit</string>
    <string name="note">Note</string>
    <string name="write_something_here">Write Something Here!</string>
    <string name="routine">Routine</string>
    <string name="reminders">Reminders</string>
    <string name="no_reminder">No Reminder!</string>
    <string name="todo">Todo</string>
    <string name="other">Other</string>
    <string name="current_progress">Current Progress</string>
    <string name="complete_task_to_increment">Complete task to Increment</string>
    <string name="_24">24</string>
    <string name="maximum_progress">Maximum Progress</string>
    <string name="define_maximum_progress">Define Maximum Progress</string>
    <string name="progress_steps">Progress Steps</string>
    <string name="steps_of_progress_increment">Steps of Progress Increment</string>
    <string name="progress_type">Progress Type</string>
    <string name="change_the_type_of_task">Change the Type of Task</string>
    <string name="mubah">Mubah</string>
    <string name="schedules">Schedules</string>
    <string name="hishab">Hisaab</string>
    <string name="all_transactions">All Transactions</string>
    <string name="total">Total</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="_23_00">23.00</string>
    <string name="_50_65">50.65</string>
    <string name="transaction_unit_bdt">৳</string>
    <string name="create_new_hisaab">Create New Hisaab</string>
    <string name="add_new">Add New</string>
    <string name="_0">0</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="save_change">Save Change</string>
    <string name="taka_sign">৳</string>
    <string name="_23_12">23/12</string>
    <string name="create_hisaab_account">Create Hisaab Account</string>
    <string name="transaction_page">Transaction Page</string>
    <string name="cash">Cash</string>
    <string name="account_name">Account Name</string>
    <string name="account_balance">Account Balance</string>
    <string name="page_name">Page Name</string>
    <string name="ibadah">Ibadah</string>
    <string name="reading">Reading</string>
    <string name="read">Read</string>
    <string name="wishlist">WishList</string>
    <string name="tags">Tags</string>
    <string name="plans">Plans</string>
    <string name="tweek">Tweek</string>
    <string name="enter_plan_name">Enter Plan Name</string>
    <string name="tasbih">Tasbih</string>
    <string name="sample_label">কোনো খাবার সামনে এলে এ দু‘আ পড়বে</string>
    <string name="sample_ar">اللَّهُمَّ بَارِكْ لَنَا فِيهِ، وَأَطْعِمْنَا خَيْرًا مِنْه</string>
    <string name="sample_bn">হে আল্লাহ! আমদের এই খাবারে বরকত দাও, এর চেও উত্তম খাবার আমাদেরকে দান করো।</string>
    <string name="sample_ref">-সুনানে আবু দাউদ, ৩৭৩০. হাদীসের সূত্র: হাসান</string>
    <string name="label">Label</string>
    <string name="arabic_text">Arabic Text</string>
    <string name="bangla_text">Bangla Text</string>
    <string name="reference">Reference</string>
    <string name="rewards">Rewards</string>
    <string name="wake_up_tasbih">ঘুম থেকে উঠার দোয়া</string>
    <string name="_1">1</string>
    <string name="time_text">Times</string>
    <string name="notifications">Notifications</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="history">History</string>
    <string name="go_ahead_do_it">#Go Ahead, #Do it</string>
    <string name="every_day">Every Day</string>
    <string name="drink">Drink</string>
    <string name="back">back</string>
    <string name="lock">Lock</string>
</resources>