<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/dimen_small">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_small"
        android:background="@drawable/checkbox_drawable">
        <EditText
            android:id="@+id/label_EditText_FragmentTasbihDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_label"
            android:background="@android:color/transparent"
            android:hint="@string/label"
            android:textAlignment="center"
            android:padding="@dimen/dimen_small"
            android:textColor="?attr/colorPrimary"
            android:textAppearance="@style/textLarge"/>
        <View
            android:id="@+id/v1_FragmentTasbihDetail"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/label_EditText_FragmentTasbihDetail"
            android:background="@color/colorGray"/>
        <EditText
            android:id="@+id/ar_EditText_FragmentTasbihDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_ar"
            android:hint="@string/arabic_text"
            android:background="@android:color/transparent"
            android:textAlignment="center"
            android:padding="@dimen/dimen_small"
            android:textAppearance="@style/textLarge"
            android:layout_below="@id/v1_FragmentTasbihDetail"/>
        <EditText
            android:id="@+id/bn_EditText_FragmentTasbihDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/sample_bn"
            android:hint="@string/bangla_text"
            android:textAlignment="center"
            android:padding="@dimen/dimen_small"
            android:textAppearance="@style/textMedium"
            android:layout_below="@id/ar_EditText_FragmentTasbihDetail"/>
        <EditText
            android:id="@+id/ref_EditText_FragmentTasbihDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/sample_ref"
            android:hint="@string/reference"
            android:textAlignment="center"
            android:padding="@dimen/dimen_small"
            android:textColor="@color/colorGrayDark"
            android:textAppearance="@style/textSmall"
            android:layout_below="@id/bn_EditText_FragmentTasbihDetail"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_small"
        android:background="@drawable/checkbox_drawable">
        <TextView
            android:id="@+id/text_reward_FragmentTasbihDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rewards"
            android:layout_marginStart="@dimen/dimen_small"
            android:layout_marginEnd="@dimen/dimen_small"
            android:padding="@dimen/dimen_small"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@style/textMedium"/>
        <EditText
            android:id="@+id/reward_EditText_FragmentTasbihDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/sample_bn"
            android:hint="@string/rewards"
            android:layout_marginStart="@dimen/dimen_small"
            android:layout_marginEnd="@dimen/dimen_small"
            android:padding="@dimen/dimen_small"
            android:textAppearance="@style/textMedium"
            android:layout_below="@id/text_reward_FragmentTasbihDetail"/>
    </RelativeLayout>


    <FrameLayout
        android:id="@+id/frameLayout_FragmentTasbihDetail"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="@dimen/dimen_small"
        android:background="@drawable/checkbox_drawable"/>

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/dimen_small">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/checkbox_drawable"
            android:padding="@dimen/dimen_small">
            <FrameLayout
                android:id="@+id/dateSelector_FrameLayout_FragmentTasbihDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_small" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:padding="@dimen/dimen_mini"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                android:layout_below="@id/dateSelector_FrameLayout_FragmentTasbihDetail">
                <include
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    layout="@layout/view_reminder"/>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>