<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="48dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="1dp"
    app:cardElevation="@dimen/cardElevation"
    android:layout_gravity="center"
    android:background="?attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:layout_marginStart="@dimen/dimen_small"
            android:layout_above="@id/date_TextView_ItemTransactionDetails"/>
        <TextView
            android:id="@+id/date_TextView_ItemTransactionDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_mini"
            android:text="@string/_23_12"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:textAppearance="@style/textMini"
            android:layout_alignParentBottom="true"/>
        <TextView
            android:id="@+id/label_TextView_ItemTransactionDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/date_TextView_ItemTransactionDetails"
            android:text="@string/text_request"
            android:maxLines="1"
            android:textAppearance="@style/textMedium"
            android:layout_marginStart="@dimen/dimen_mini"
            android:layout_marginEnd="@dimen/dimen_mini"
            android:layout_marginTop="@dimen/dimen_mini"
            android:layout_toStartOf="@id/amount_TextView__ItemTransactionDetails" />
        <TextView
            android:id="@+id/amount_TextView__ItemTransactionDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/textMedium"
            android:text="@string/_50_65"
            android:layout_marginEnd="@dimen/dimen_mini"
            android:layout_toStartOf="@id/unit_TextView__ItemTransactionDetails"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/unit_TextView__ItemTransactionDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/textMedium"
            android:text="@string/taka_sign"
            android:layout_marginEnd="@dimen/dimen_small"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tag_TextView_ItemTransactionDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/textSmall"
            android:maxLines="1"
            android:text="@string/dummy_tags"
            android:layout_below="@id/label_TextView_ItemTransactionDetails"
            android:layout_alignStart="@id/label_TextView_ItemTransactionDetails"
            android:layout_alignEnd="@id/label_TextView_ItemTransactionDetails"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>

